--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>UniConnect - A place to find your need</title>
@@ -20,9 +19,22 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
+    <!-- <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCclW6z6BFFeZQHg_yAR5p9z-U3Qpyobhk&callback=initMap&libraries=places&v=weekly"
+      defer AIzaSyCclW6z6BFFeZQHg_yAR5p9z-U3Qpyobhk
+    ></script> -->
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCxQJiXRp0_v0M3bL-103dsdCStBf6qskE&callback=initMap&libraries=places&v=weekly"
       defer
     ></script>
+    <!-- <script>
+      function initMap() {
+        // create a map
+        var map = new google.maps.Map(document.getElementById("map"), {
+          center: { lat: -34.397, lng: 150.644 },
+          zoom: 8,
+        });
+      }
+    </script> -->
   </body>
 </html>
