--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCxQJiXRp0_v0M3bL-103dsdCStBf6qskE&callback=initMap&libraries=places&v=weekly"
       defer
     ></script>
-    <!-- <script>
+    <script>
       function initMap() {
         // create a map
         var map = new google.maps.Map(document.getElementById("map"), {
@@ -35,6 +35,6 @@
           zoom: 8,
         });
       }
-    </script> -->
+    </script>
   </body>
 </html>
