--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,14 @@
       defer
     ></script>
     <!-- <script>
-      function initMap() {
-        // create a map
-        var map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: -34.397, lng: 150.644 },
-          zoom: 8,
-        });
-      }
-    </script> -->
+            function initMap() {
+              // create a map
+              var map = new google.maps.Map(document.getElementById("map"), {
+                center: { lat: -34.397, lng: 150.644 },
+                zoom: 8,
+              });
+            }
+    </script>
+    -->
   </body>
 </html>
